--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start karma.webpack.conf.js",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --bail",
-    "lint": "tslint ./src/**/*.ts -t verbose"
+    "lint": "tslint ./src/application/**/*.ts -t verbose"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/compiler-cli": "~4.0.0",
@@ -35,7 +36,6 @@
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
-    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
@@ -51,11 +51,13 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "lodash": "^4.16.2",
+    "node-sass": "^4.5.2",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~4.0.14",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.13.1",
     "tslint": "^3.15.1",
     "typescript": "~2.2.0",
