--- a/package.json
+++ b/package.json
@@ -13,20 +13,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "@angular/tsc-wrapped": "~4.0.0",
-    "@angular/upgrade": "~4.0.0",
-    "angular-in-memory-web-api": "~0.3.1",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4"
@@ -36,6 +32,7 @@
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
+    "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
@@ -60,7 +57,7 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.1",
     "tslint": "^3.15.1",
-    "typescript": "~2.2.0",
+    "typescript": "^2.2.2",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^3.0.0"
